# Qt-Tool

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  test_moc.cpp  widget-test-result.txt
.claude/: settings.local.json
.workbuddy/: expert-history.json
.workbuddy/memory/: 2026-04-28.md  2026-04-30.md  2026-05-08.md  2026-05-09.md  2026-06-10.md  MEMORY.md  crash-fix-overview.md
doc/: file_compare_optimization_plan.md
docs/: project_analysis_report.md  修复计划.md  嵌入式调试与数据分析助手_UI结构设计与优化方案_v2.0_2026-04-30.md  项目全面分析报告.md
docs/superpowers/plans/: 2026-05-05-binanalyzer-phase1.md
docs/superpowers/specs/: 2026-05-05-binanalyzer-phase1-design.md
packaging/: installer.nsi  license.txt
src/app/: AppShell.cpp  AppShell.h  CMakeLists.txt  app_icon.rc  main.cpp
src/app/pages/: BinAnalyzerPage.cpp  BinAnalyzerPage.h  CANBusPage.cpp  CANBusPage.h  DataConvertPage.cpp  DataConvertPage.h  FileComparePage.cpp  FileComparePage.h  HomePage.cpp  HomePage.h  ModulePlaceholderPage.cpp  ModulePlaceholderPage.h  ProtocolDecoderPage.cpp  ProtocolDecoderPage.h  RtosMonitorPage.cpp  RtosMonitorPage.h  SerialAssistantPage.cpp  SerialAssistantPage.h  SerialConsolePage.cpp  SerialConsolePage.h  SerialPortEnumerator.cpp  SerialPortEnumerator.h  SettingsPage.cpp  SettingsPage.h  UserGuidePage.cpp  UserGuidePage.h  WaveformPage.cpp  WaveformPage.h
src/app/widgets/: BinAnalyzerWidget.cpp  BinAnalyzerWidget.h  CodeEditor.cpp  CodeEditor.h  DataConvertWidget.cpp  DataConvertWidget.h  DiffMinimapWidget.cpp  DiffMinimapWidget.h  DiffView.cpp  DiffView.h  HexViewerWidget.cpp  HexViewerWidget.h  IndustrialStatusCard.cpp  IndustrialStatusCard.h  ModuleIconFactory.cpp  ModuleIconFactory.h  PlaybackControl.cpp  PlaybackControl.h  ProtocolTemplateEditor.cpp  ProtocolTemplateEditor.h  QuickCommandPanel.cpp  QuickCommandPanel.h  SearchBarWidget.cpp  SearchBarWidget.h  SerialConfigBar.cpp  SerialConfigBar.h  SerialReceiveView.cpp  SerialReceiveView.h  SerialSendPanel.cpp  SerialSendPanel.h  SideNavBar.cpp  SideNavBar.h  StringExtractPanel.cpp  StringExtractPanel.h  TerminalWidget.cpp  TerminalWidget.h  WaveformChartWidget.cpp  WaveformChartWidget.h
src/core/: CMakeLists.txt  FileCompareEngine.cpp  FileCompareEngine.h
src/core/databus/: DataBus.cpp  DataBus.h  DataPacket.h  SubscriptionHandle.h
src/core/plugin/: ICore.h  IPlugin.h  IViewFactory.h  PluginLoader.cpp  PluginLoader.h  PluginRegistry.cpp  PluginRegistry.h
src/core/services/: AppPaths.cpp  AppPaths.h  BinFileLoader.cpp  BinFileLoader.h  BinSearchService.cpp  BinSearchService.h  ByteChecksumService.cpp  ByteChecksumService.h  ByteDataInspectorService.cpp  ByteDataInspectorService.h  ByteFormatService.cpp  ByteFormatService.h  DataConvertService.cpp  DataConvertService.h  DataLogger.cpp  DataLogger.h  EncodingUtil.cpp  EncodingUtil.h  ProtocolDecoder.cpp  ProtocolDecoder.h  ProtocolTemplate.cpp  ProtocolTemplate.h  RecentRecordManager.cpp  RecentRecordManager.h  RtosTaskParser.cpp  RtosTaskParser.h  SlcanCodec.cpp  SlcanCodec.h  StringExtractor.cpp  StringExtractor.h
src/core/transport/: ITransport.h  SerialTransport.cpp  SerialTransport.h  TransportRegistry.cpp  TransportRegistry.h
src/resources/: resources.qrc
src/resources/docs/: user_guide.html
src/resources/scripts/: est_serial_helper.py
src/resources/themes/: industrial_dark.qss  wood_classic.qss
tests/: CMakeLists.txt  app_widget_tests.cpp  data_logger_tests.cpp  file_compare_engine_tests.cpp  file_compare_page_tests.cpp  serial_transport_tests.cpp
